--- a/index.html
+++ b/index.html
@@ -240,7 +240,13 @@
 
                 <p>There are really so many sticky notes that we can add here, but we want to also give you a chance to practice thinking of some of your own.</p>
             </section>
-
+<!-- Credit for brainstorming exercise -->
+<p style="font-size: small; color: gray;">
+  Brainstorming exercise adapted from 
+  <a href="https://www.cloudskillsboost.google/paths/1951/course_templates/1268/documents/533111" target="_blank" rel="noopener">
+    Google Cloud Skills Boost
+  </a>.
+</p>
             <section>
                 <h2 class="text-xl font-semibold text-gray-700 border-b pb-2 mb-4">Next Steps & Your Turn</h2>
                 <p>And then, once you have your creative matrix, you can then go through each sticky note and determine how impactful the solution would be and how much work the solution is to build.</p>
