add policy and brainstorming text back into appropriate tabs

--- a/index.html
+++ b/index.html
@@ -67,8 +67,126 @@
 
         <!-- Policy Tab -->
         <div id="policyTab" class="tab-content active">
-            <!-- [Policy content as before, omitted for brevity] -->
-            <header class="mb-6 text-center">
+
+            <section>
+                <h2 class="text-xl font-semibold text-gray-700 border-b pb-2 mb-4">1. Purpose</h2>
+                <p>This policy outlines the guidelines for the responsible, ethical, and productive use of Artificial Intelligence (AI) tools at [Company Name]. Our goal is to leverage AI to enhance creativity, improve efficiency, and support our work in [describe core business activities, e.g., delivering excellent products/services], while safeguarding our company, employee, and client interests.</p>
+            </section>
+
+            <section>
+                <h2 class="text-xl font-semibold text-gray-700 border-b pb-2 mb-4">2. Scope</h2>
+                <p>This policy applies to all [Company Name] employees, contractors, and anyone acting on behalf of [Company Name] when using AI tools for company-related work.</p>
+            </section>
+
+            <section>
+                <h2 class="text-xl font-semibold text-gray-700 border-b pb-2 mb-4">3. Guiding Principles</h2>
+                <ul class="list-disc pl-5 space-y-2">
+                    <li><strong>Innovation and Efficiency:</strong> We encourage exploring AI tools to improve our processes, generate creative ideas, and streamline repetitive tasks.</li>
+                    <li><strong>Human Oversight is Key:</strong> AI is a tool to assist, not replace, human judgment and expertise. All AI-generated content, designs, and decisions with significant impact must be reviewed and approved by a human.</li>
+                    <li><strong>Protecting Confidentiality:</strong> We must protect [Company Name]'s proprietary information and our clients' sensitive data when using AI tools.</li>
+                    <li><strong>Respecting Intellectual Property:</strong> We will respect copyright and intellectual property rights when using AI and in the work we produce.</li>
+                    <li><strong>Ethical Use:</strong> We are committed to using AI in a way that is fair, unbiased, and reflects our company values.</li>
+                    <li><strong>Transparency:</strong> We will be transparent about our use of AI where appropriate and required.</li>
+                </ul>
+            </section>
+
+            <section>
+                <h2 class="text-xl font-semibold text-gray-700 border-b pb-2 mb-4">4. Approved AI Tools & Usage</h2>
+                <h3 class="text-lg font-medium text-gray-700">General Use:</h3>
+                <p>Employees may use AI tools for tasks such as:</p>
+                <ul class="list-disc pl-5 space-y-1">
+                    <li>Generating initial concepts or brainstorming ideas.</li>
+                    <li>Assisting with drafting content (e.g., emails, reports, marketing copy) – always requiring human review and editing.</li>
+                    <li>Researching information and trends.</li>
+                    <li>Automating simple or repetitive tasks where appropriate and with oversight.</li>
+                    <li>Analyzing data (with appropriate safeguards for sensitive information).</li>
+                </ul>
+                <h3 class="text-lg font-medium text-gray-700 mt-3">Specific Tools:</h3>
+                <p>A list of currently approved AI tools will be maintained by [Specify Person/Department, e.g., IT Department, Management Team]. Employees wishing to use a new AI tool for work purposes must request and receive approval from [Specify Person/Department] before use to ensure it meets our standards for security, privacy, and IP.</p>
+                <h3 class="text-lg font-medium text-gray-700 mt-3">Prohibited Uses:</h3>
+                <ul class="list-disc pl-5 space-y-1">
+                    <li>Do not input highly sensitive or confidential client information (e.g., financial data, personal identification information, trade secrets) into public or unsecured AI tools. Only use AI tools that have been vetted and approved for handling such information.</li>
+                    <li>Do not use AI to generate content that is discriminatory, offensive, illegal, defamatory, or that could harm the reputation of [Company Name] or its clients.</li>
+                    <li>Do not present AI-generated work as solely your own creation without internal acknowledgment of AI assistance. Transparency with clients regarding significant AI use in deliverables will be determined on a case-by-case basis by management.</li>
+                    <li>Do not use AI for any purpose that could compromise the security of [Company Name]'s network, company data, or client data.</li>
+                    <li>Do not use AI in a way that violates any applicable laws or regulations.</li>
+                </ul>
+            </section>
+
+            <section>
+                <h2 class="text-xl font-semibold text-gray-700 border-b pb-2 mb-4">5. Data Privacy and Confidentiality</h2>
+                <ul class="list-disc pl-5 space-y-2">
+                    <li>Exercise extreme caution with all data input into AI tools. Avoid using personally identifiable information (PII), protected health information (PHI), or other sensitive data unless the AI tool is specifically approved for such purposes and has robust, verified security and privacy measures in place.</li>
+                    <li>For projects involving any personal or sensitive data, ensure all information is handled in strict accordance with privacy best practices, client agreements, and relevant regulations (e.g., GDPR, CCPA, HIPAA if applicable).</li>
+                    <li>Default to anonymizing data or using generic placeholders when experimenting with AI for general concept development.</li>
+                </ul>
+            </section>
+
+            <section>
+                <h2 class="text-xl font-semibold text-gray-700 border-b pb-2 mb-4">6. Intellectual Property (IP)</h2>
+                <ul class="list-disc pl-5 space-y-2">
+                    <li>While AI can assist in the creation process, the final output, especially when significantly modified and refined by human expertise, may be considered the intellectual property of [Company Name] or its clients, as defined by contractual agreements.</li>
+                    <li>Ensure that AI-generated elements (e.g., images, text snippets, code) do not infringe on existing copyrights, trademarks, or patents. Prioritize using AI tools that provide clear information on the commercial usage rights of their outputs or that generate verifiably original work.</li>
+                    <li>Be aware that the legal landscape regarding IP ownership of AI-generated content is evolving. Consult with [Specify Person/Department, e.g., Legal Counsel if available, or Senior Management] if you have questions about IP rights.</li>
+                </ul>
+            </section>
+
+            <section>
+                <h2 class="text-xl font-semibold text-gray-700 border-b pb-2 mb-4">7. Accuracy, Quality, and Human Oversight</h2>
+                <ul class="list-disc pl-5 space-y-2">
+                    <li>AI-generated content can sometimes be inaccurate, incomplete, biased, or contextually inappropriate ("hallucinations").</li>
+                    <li><strong>All AI-generated outputs that will be used for decision-making, client deliverables, or public dissemination must be critically reviewed, fact-checked, and meticulously edited by an experienced employee before use.</strong></li>
+                    <li>The employee utilizing the AI tool is ultimately responsible for the accuracy, quality, and appropriateness of the final output. Our commitment to delivering high-quality, error-free work remains paramount.</li>
+                </ul>
+            </section>
+
+            <section>
+                <h2 class="text-xl font-semibold text-gray-700 border-b pb-2 mb-4">8. Security</h2>
+                <ul class="list-disc pl-5 space-y-2">
+                    <li>Use strong, unique passwords for any AI tools that require an account. Enable multi-factor authentication (MFA) wherever available.</li>
+                    <li>Be cautious of phishing scams or malicious AI tools. Only download or access AI tools from reputable sources and, where applicable, ensure they are on the approved list.</li>
+                    <li>Report any suspected security vulnerabilities, data breaches, or unusual AI tool behavior related to company or client data to [Specify Person/Department, e.g., IT Support, Security Officer] immediately.</li>
+                </ul>
+            </section>
+
+            <section>
+                <h2 class="text-xl font-semibold text-gray-700 border-b pb-2 mb-4">9. Training and Awareness</h2>
+                <p>[Company Name] may provide guidance, resources, or training on the responsible and effective use of approved AI tools. Employees are encouraged to stay informed about AI capabilities, limitations, and best practices relevant to their roles.</p>
+            </section>
+
+            <section>
+                <h2 class="text-xl font-semibold text-gray-700 border-b pb-2 mb-4">10. Policy Review and Updates</h2>
+                <p>This AI policy will be reviewed periodically and may be updated as AI technologies and best practices evolve. Employees will be notified of any significant changes.</p>
+            </section>
+
+            <section>
+                <h2 class="text-xl font-semibold text-gray-700 border-b pb-2 mb-4">11. Policy Violations</h2>
+                <p>Failure to comply with this policy may result in disciplinary action, up to and including termination of employment or contract, and may also carry legal consequences depending on the nature of the violation.</p>
+            </section>
+
+            <section>
+                <h2 class="text-xl font-semibold text-gray-700 border-b pb-2 mb-4">12. Questions</h2>
+                <p>If you have any questions about this policy, how it applies to a specific situation, or whether a particular AI tool is appropriate for use, please contact [Specify Person/Department, e.g., Your Manager, HR Department, AI Policy Lead].</p>
+            </section>
+
+            <section class="mt-8 pt-6 border-t">
+                <h3 class="text-lg font-semibold text-gray-700">Acknowledgement</h3>
+                <p class="mt-2">I have read, understood, and agree to comply with the [Company Name] Corporate AI Policy.</p>
+                <div class="mt-6 space-y-4">
+                    <div>
+                        <label for="employeeName" class="block text-sm font-medium text-gray-700">Employee Name (Print):</label>
+                        <input type="text" id="employeeName" class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm">
+                    </div>
+                    <div>
+                        <label for="employeeSignature" class="block text-sm font-medium text-gray-700">Employee Signature:</label>
+                        <input type="text" id="employeeSignature" class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm">
+                    </div>
+                    <div>
+                        <label for="dateSigned" class="block text-sm font-medium text-gray-700">Date:</label>
+                        <input type="date" id="dateSigned" class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm">
+                    </div>
+                </div>
+            </section>            <header class="mb-6 text-center">
                 <h1 class="text-3xl font-bold text-gray-800">Corporate AI Policy</h1>
                 <p class="text-sm text-gray-500">[Company Name]</p>
             </header>
@@ -88,8 +206,38 @@
                     Google Cloud Skills Boost
                 </a>.
             </p>
-            <!-- [Brainstorming exercise content as before, omitted for brevity] -->
-        </div>
+         <section>
+                <p>It can sometimes be tough to brainstorm new gen AI use cases and determine which ones to tackle. One method we recommend trying is the <strong>creative matrix</strong>.</p>
+                <p>A creative matrix is great because it can help your team think through different aspects of what gen AI can do. For this creative matrix workflow, you would get a team together and create two axes. The axes are a bit flexible, but we can give you some ideas:</p>
+                <ul class="list-disc pl-5 space-y-1">
+                    <li>On one axis, you might write the different options for <strong>gen AI solutions</strong>. This can be organized by gen AI product, modality (e.g., text, image, code, audio), or another dimension.</li>
+                    <li>On the other axis, you would write out things that are <strong>specific to your business</strong>. This can be business personas (e.g., marketing manager, customer service agent, operations lead), workflows (e.g., content creation, customer support, product design), or strategic goals (e.g., increase efficiency, drive innovation, enhance customer experience).</li>
+                </ul>
+                <p>Then, have the team write sticky notes (either virtually or in person) with different ideas of how the two axes can intersect and place them in the right spot. This should get you to think creatively about how your organization can leverage gen AI to truly help your business priorities.</p>
+            </section>
+
+            <section>
+                <h2 class="text-xl font-semibold text-gray-700 border-b pb-2 mb-4">Example: Faux Floral Business</h2>
+                <p>Let’s take a look at this creative matrix sample from a team working on a faux floral business. On one axis, they have the business priorities for their faux floral business. On the other axis, they have some Google Cloud gen AI capabilities.</p>
+                <p>We will read out just a few examples of what the team can add on sticky notes, and then you will be able to see a few more below this video.</p>
+
+                <div class="sticky-note-example">
+                    <p><strong>Example Sticky Note 1:</strong></p>
+                    <p>For the overlap between the <strong>Drive Innovation</strong> (Business Priority) section and <strong>Vertex AI Search</strong> (Gen AI Capability), an idea could be: <em>"Create a search tool where customers can upload images to find similar faux floral arrangements."</em></p>
+                </div>
+
+                <div class="sticky-note-example">
+                    <p><strong>Example Sticky Note 2:</strong></p>
+                    <p>If we want to <strong>Enhance Customer Experience</strong> (Business Priority) with <strong>Vertex AI Conversation</strong> (Gen AI Capability), an idea could be: <em>"Build an AI-powered chatbot to provide instant customer support and answer questions about faux floral care, arrangement, and ordering."</em></p>
+                </div>
+
+                <div class="sticky-note-example">
+                    <p><strong>Example Sticky Note 3:</strong></p>
+                    <p>To <strong>Increase Efficiency</strong> (Business Priority), we can use <strong>Vertex AI Studio</strong> (Gen AI Capability) to: <em>"Fine-tune a model to analyze customer data and predict future demand for different faux floral products."</em></p>
+                </div>
+
+                <p>There are really so many sticky notes that we can add here, but we want to also give you a chance to practice thinking of some of your own.</p>
+            </section>        </div>
 
         <!-- Ideas Tab -->
         <div id="ideasTab" class="tab-content">
